tests/valid/numbers.d.ts
export declare function rgbNumbesList(): void;
export declare function rgbaNumbersList(): void;
