tests/invalid/numbers.d.ts
export declare function invalidNumberValues(): void;
